--- a/library-backend/package.json
+++ b/library-backend/package.json
@@ -2,14 +2,19 @@
   "name": "fullstackopen-graphql",
   "version": "1.0.0",
   "description": "graphql practice",
-  "main": "library-backend.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.11.3",
-    "graphql": "^16.10.0"
+    "dotenv": "^16.4.7",
+    "graphql": "^16.10.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.9.6",
+    "mongoose-unique-validator": "^5.0.1",
+    "nodemon": "^3.1.9"
   }
 }
