--- a/library-backend/package.json
+++ b/library-backend/package.json
@@ -10,11 +10,17 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.11.3",
+    "@graphql-tools/schema": "^10.0.16",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "graphql": "^16.10.0",
+    "graphql-subscriptions": "^3.0.0",
+    "graphql-ws": "^6.0.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.6",
     "mongoose-unique-validator": "^5.0.1",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "ws": "^8.18.0"
   }
 }
